# PointVis

./: .gitignore  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  PointsViewer.cpp  PointsViewer.h  ViewerExample.cpp  pointVis.cpp  pointVis.hpp
test/: CMakeLists.txt  pointVisTest.cpp
